# MultiBasinHydro

./: .condarc  .gitignore  analsyis_basins.out  analsyis_loss.out  cpu_LSTM.sh  cpu_LSTM_AE.bsub  cpu_LSTM_AE.bsup  cpu_LSTM_AE.sh  cpu_LSTM_AE.slurm  encoded_features_lstm-ae-bdTrue-E27.txt  encoded_features_lstm-ae-bdTrue-E3.txt  encoded_features_lstm-ae-bdTrue-E4.txt  encoded_features_lstm_ae.txt  gpu_LSTM.sh  gpu_LSTM_AE.sh  gpu_LSTM_AE.slurm  gpu_LSTM_AE_nf5.sh  gpu_zhaw_LSTM.sh  gpu_zhaw_LSTM_AE.sh  hydro.txt  job_LSTM.bsub  job_LSTM_AE.bsub  job_analysis.sh  job_analysis_basins.sh  job_analysis_loss.sh  job_extract_features.sh  pyproject.toml  statics.txt  statics_features.txt  statics_norm.txt
encoded_features/: encoded_features_lstm-ae-bdTrue-E30-1Y.txt  encoded_features_lstm-ae-bdTrue-E4-1Y.txt  encoded_features_lstm-ae-bdTrue-E4.txt
jobs/: gpu_LSTM_AE.sh  gpu_zhaw_LSTM.sh  gpu_zhaw_LSTM_AE.sh  job_analysis_basins.sh  job_analysis_loss.sh  job_extract_features.sh
plot/: plot_bestSets_imbalance_fullH.txt  plot_bestSets_imbalance_fullS.txt  plot_bestSets_imbalance_lstm-ae-bdTrue-E27.txt  plot_bestSets_imbalance_lstm-ae-bdTrue-E3.txt  plot_bestSets_imbalance_lstm-ae-bdTrue-E4.txt
src/: LSTM_AE_main.py  LSTM_main.py  analyse_features.py  analysis_basins.py  analysis_id.py  analysis_imbalance.py  analysis_loss.py  analysis_manifold.py  dataset.py  extract_features.py  main.py  main_colab.ipynb  models.py  utils.py
src/MultiBasinHydro_lupoalberto98/: LSTM_AE_main.py  LSTM_AE_nf5_main.py  LSTM_main.py  analyse_features.py  analysis.py  analysis_basins.py  (+9 more)
(+2 files in other folders)
