[build-system]
requires = ["hatchling", "numpy", "matplotlib", "pandas", "torch", "pytorch_lightning", "torchvision"]
build-backend = "hatchling.build"

[project]
name = "MultiBasinHydro_lupoalberto98"
version = "0.0.1"
authors = [
  { name="Alberto Bassi", email="alberto.bassi@eawag.ch" },
]
description = "Inferring static attributes from multi basins dataset"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

